[gd_scene load_steps=17 format=2]

[ext_resource path="res://Assets/Fonts/vcr.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://Tools/XML Converter.gd" type="Script" id=2]
[ext_resource path="res://Assets/Images/UI/menuDesat.png" type="Texture" id=3]
[ext_resource path="res://Tools/Choose Sprites.gd" type="Script" id=4]

[sub_resource type="StyleBoxFlat" id=3]
bg_color = Color( 0.145098, 0.145098, 0.145098, 1 )
corner_radius_top_left = 16
corner_radius_top_right = 16

[sub_resource type="DynamicFont" id=4]
size = 32
outline_size = 2
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 1 )

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0.145098, 0.145098, 0.145098, 1 )
corner_radius_top_left = 16
corner_radius_top_right = 16
corner_radius_bottom_right = 16
corner_radius_bottom_left = 16

[sub_resource type="DynamicFont" id=2]
size = 24
outline_size = 2
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=9]
outline_size = 2
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 1 )

[sub_resource type="StyleBoxFlat" id=6]
bg_color = Color( 0.247059, 0.247059, 0.247059, 1 )
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8

[sub_resource type="StyleBoxFlat" id=8]
bg_color = Color( 0.105882, 0.105882, 0.105882, 1 )
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8

[sub_resource type="StyleBoxFlat" id=7]
bg_color = Color( 0.196078, 0.196078, 0.196078, 1 )
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8

[sub_resource type="DynamicFont" id=10]
outline_size = 2
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 1 )

[sub_resource type="StyleBoxFlat" id=11]
content_margin_left = 5.0
bg_color = Color( 0.196078, 0.196078, 0.196078, 1 )
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8

[sub_resource type="DynamicFont" id=12]
outline_size = 2
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=5]
size = 24
outline_size = 2
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 1 )

[node name="XML Converter" type="Node2D"]

[node name="BG" type="Sprite" parent="."]
modulate = Color( 0.364706, 0.360784, 0.411765, 1 )
position = Vector2( -116, -58 )
scale = Vector2( 1.095, 1.095 )
texture = ExtResource( 3 )
centered = false

[node name="Converted Panel" type="Panel" parent="."]
margin_left = 706.0
margin_top = 108.0
margin_right = 1205.0
margin_bottom = 720.0
custom_styles/panel = SubResource( 3 )

[node name="ConvertedSprites" type="Label" parent="Converted Panel"]
margin_left = 7.0
margin_top = 3.0
margin_right = 498.0
margin_bottom = 32.0
custom_fonts/font = SubResource( 4 )
text = "Converted Sprites:"
align = 1
valign = 1

[node name="SpriteData" type="AnimatedSprite" parent="."]
position = Vector2( 954, 403 )

[node name="Main Panel" type="Panel" parent="."]
margin_left = 20.0
margin_top = 136.0
margin_right = 326.0
margin_bottom = 586.0
custom_styles/panel = SubResource( 1 )
script = ExtResource( 2 )

[node name="Title" type="Label" parent="Main Panel"]
margin_left = 20.0
margin_top = 18.0
margin_right = 286.0
margin_bottom = 40.0
custom_fonts/font = SubResource( 2 )
text = "XML -> SpriteFrames"
align = 1
valign = 1

[node name="Choose Sprites" type="Button" parent="Main Panel"]
margin_left = 14.0
margin_top = 57.0
margin_right = 170.0
margin_bottom = 93.0
focus_mode = 0
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_hover = Color( 0.894118, 0.894118, 0.894118, 1 )
custom_fonts/font = SubResource( 9 )
custom_styles/hover = SubResource( 6 )
custom_styles/pressed = SubResource( 8 )
custom_styles/normal = SubResource( 7 )
text = "Choose Sprites"
script = ExtResource( 4 )

[node name="FPS" type="LineEdit" parent="Main Panel"]
margin_left = 182.0
margin_top = 58.0
margin_right = 295.0
margin_bottom = 91.0
custom_colors/font_color_selected = Color( 1, 1, 1, 1 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_uneditable = Color( 1, 1, 1, 1 )
custom_fonts/font = SubResource( 10 )
custom_styles/focus = SubResource( 11 )
custom_styles/normal = SubResource( 11 )
text = "24"
placeholder_text = "24"

[node name="FPS Text" type="Label" parent="Main Panel"]
margin_left = 182.0
margin_top = 92.0
margin_right = 294.0
margin_bottom = 114.0
custom_fonts/font = SubResource( 12 )
text = "Anim FPS"
align = 1
valign = 1

[node name="Looped Checkbox" type="CheckBox" parent="Main Panel"]
margin_left = 15.0
margin_top = 101.0
margin_right = 106.0
margin_bottom = 125.0
focus_mode = 0
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_fonts/font = SubResource( 12 )
text = "Looped?"

[node name="Optimized Checkbox" type="CheckBox" parent="Main Panel"]
margin_left = 15.0
margin_top = 127.0
margin_right = 133.0
margin_bottom = 151.0
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_fonts/font = SubResource( 12 )
pressed = true
text = "Optimized?"

[node name="Convert Button" type="Button" parent="Main Panel"]
margin_left = 69.0
margin_top = 404.0
margin_right = 239.0
margin_bottom = 442.0
focus_mode = 0
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_hover = Color( 0.894118, 0.894118, 0.894118, 1 )
custom_fonts/font = SubResource( 5 )
custom_styles/hover = SubResource( 6 )
custom_styles/pressed = SubResource( 8 )
custom_styles/normal = SubResource( 7 )
text = "Convert"

[node name="FileDialog" type="FileDialog" parent="."]
margin_left = 245.0
margin_top = 198.0
margin_right = 954.0
margin_bottom = 534.0
window_title = "Open a File"
mode = 0
filters = PoolStringArray( "*.png ; Spritesheets", "*.xml ; XML Spritesheet Data" )
current_dir = "res://Assets/Images"
current_path = "res://Assets/Images/"

[connection signal="pressed" from="Main Panel/Choose Sprites" to="Main Panel/Choose Sprites" method="popup_shit"]
[connection signal="text_changed" from="Main Panel/FPS" to="Main Panel" method="set_fps"]
[connection signal="toggled" from="Main Panel/Looped Checkbox" to="Main Panel" method="set_looped"]
[connection signal="toggled" from="Main Panel/Optimized Checkbox" to="Main Panel" method="set_optimized"]
[connection signal="pressed" from="Main Panel/Convert Button" to="Main Panel" method="convert_xml"]
[connection signal="file_selected" from="FileDialog" to="Main Panel" method="set_path"]
